--- a/ClientWPF/ClientWPF.csproj
+++ b/ClientWPF/ClientWPF.csproj
@@ -119,5 +119,8 @@
       <Name>Common</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\background.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
